--- a/SVN/ServerManager/ServerManager.vcxproj.filters
+++ b/SVN/ServerManager/ServerManager.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClCompile Include="DataSet\Group.cpp">
       <Filter>DataSet</Filter>
     </ClCompile>
+    <ClCompile Include="DataSet\DataSet.cpp">
+      <Filter>DataSet</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
