--- a/SVN/ServerManager/ServerManager.vcxproj.filters
+++ b/SVN/ServerManager/ServerManager.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="NetWork\UDPNet.h">
       <Filter>NetWork</Filter>
     </ClInclude>
+    <ClInclude Include="NetWork\Factory.h">
+      <Filter>NetWork</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Project\main.cpp">
@@ -96,6 +99,9 @@
       <Filter>NetWork</Filter>
     </ClCompile>
     <ClCompile Include="NetWork\UDPNet.cpp">
+      <Filter>NetWork</Filter>
+    </ClCompile>
+    <ClCompile Include="NetWork\Factory.cpp">
       <Filter>NetWork</Filter>
     </ClCompile>
   </ItemGroup>
