--- a/SVN/ServerManager/ServerManager.vcxproj
+++ b/SVN/ServerManager/ServerManager.vcxproj
@@ -54,7 +54,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>./Kernel;./Project;./NetWork;../PackDef;../Common;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./Kernel;./Project;./NetWork;../PackDef;../Common;./DataSet;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
